Adds virtual text in coc config; mainly for rust; will see later if need to make it lang specific

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -2,6 +2,9 @@
   "suggest.noselect": true,
   "git.enableGutters": true,
   "git.addGBlameToVirtualText": true,
+  "diagnostic.virtualText": true,
+  "diagnostic.virtualTextCurrentLineOnly": false,
+  "diagnostic.virtualTextPrefix": "■■ ",
   "rust-analyzer.inlayHints.typeHints.enable": true,
   "rust-analyzer.inlayHints.parameterHints.enable": true,
   "coc.preferences.formatOnSave": true,
