--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -5,12 +5,14 @@
   "diagnostic.virtualText": true,
   "diagnostic.virtualTextCurrentLineOnly": false,
   "diagnostic.virtualTextPrefix": "■■ ",
+  "eslint.rules.customizations": [
+    { "rule": "max-lines-per-function", "severity": "off" },
+    { "rule": "max-lines", "severity": "off" }
+  ],
   "rust-analyzer.inlayHints.typeHints.enable": true,
   "rust-analyzer.inlayHints.parameterHints.enable": true,
   "coc.preferences.formatOnSave": true,
   "tsserver.maxTsServerMemory": 20000,
-  // "tsserver.trace.server": "verbose",
-  // "tsserver.log": "verbose",
   "clangd.fallbackFlags": ["--std=c++17"],
   "clangd.trace.server": "verbose",
   "eslint.options": {
@@ -18,5 +20,7 @@
       "no-restricted-syntax": "off"
     }
   },
-  "java.import.gradle.java.home": "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-17.0.12/Contents/Home"
+  "java.import.gradle.java.home": "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-21.0.5/Contents/Home",
+  "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx16G -Xms16G -Xlog:disable",
+  "java.trace.server": "verbose"
 }
