[nvim] Setups rust debugger using codelldb, nvim-dap-ui, nvim-dap, nvim-dap-virtual-text

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -12,6 +12,9 @@
   ],
   "rust-analyzer.inlayHints.typeHints.enable": true,
   "rust-analyzer.inlayHints.parameterHints.enable": true,
+  "rust-analyzer.inlayHints.lifetimeElisionHints.enable": "skip_trivial",
+  "rust-analyzer.debug.runtime": "nvim-dap",
+  "rust-analyzer.debug.nvimdap.configuration.template": "require('plugins/dap').get_configuration_template($exe, $args)",
   "coc.preferences.formatOnSave": true,
   "tsserver.maxTsServerMemory": 20000,
   "clangd.fallbackFlags": ["--std=c++17"],
