[nvim] Setting up coc-java

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -25,7 +25,15 @@
       "no-restricted-syntax": "off"
     }
   },
-  "java.import.gradle.java.home": "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-21.0.5/Contents/Home",
-  "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx16G -Xms16G -Xlog:disable",
-  "java.trace.server": "verbose"
+  "java.jdt.ls.java.home": "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-21.0.5/Contents/Home",
+  "java.trace.server": "verbose",
+  "java.import.gradle.offline.enabled": true,
+  "java.eclipse.downloadSources": false,
+  "java.configuration.runtimes": [
+    {
+      "name": "JavaSE-21",
+      "path": "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-21.0.5/Contents/Home"
+    }
+  ],
+  "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx16G -Xms16G -Xlog:disable"
 }
