--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -8,21 +8,71 @@
   "eslint.rules.customizations": [
     { "rule": "max-lines-per-function", "severity": "off" },
     { "rule": "max-lines", "severity": "off" },
-    { "rule": "max-statements", "severity": "off" }
+    { "rule": "max-statements", "severity": "off" },
+    { "rule": "@sprinklrjs/no-js-files", "severity": "off" },
+    { "rule": "@sprinklrjs/no-legacy-i18n", "severity": "off" },
+    {
+      "rule": "@typescript-eslint/consistent-type-assertions",
+      "severity": "off"
+    },
+    {
+      "rule": "@typescript-eslint/no-non-null-assertion",
+      "severity": "info"
+    }
   ],
   "rust-analyzer.inlayHints.typeHints.enable": true,
   "rust-analyzer.inlayHints.parameterHints.enable": true,
   "rust-analyzer.inlayHints.lifetimeElisionHints.enable": "skip_trivial",
+  "rust-analyzer.customTerminal": "FloatermNew --autoclose=0",
   "rust-analyzer.debug.runtime": "nvim-dap",
   "rust-analyzer.debug.nvimdap.configuration.template": "require('plugins/dap').get_configuration_template($exe, $args)",
   "coc.preferences.formatOnSave": true,
-  "tsserver.maxTsServerMemory": 20000,
+  "tsserver.maxTsServerMemory": 24000,
   "tsserver.experimental.enableProjectDiagnostics": false,
+  "tsserver.useLocalTsdk": true,
+  "tsserver.useSyntaxServer": "auto",
+  "typescript.format.enable": false,
+  "typescript.inlayHints.parameterNames.enabled": "literals",
+  "typescript.inlayHints.parameterNames.suppressWhenArgumentMatchesName": true,
+  "typescript.inlayHints.parameterTypes.enabled": false,
+  "typescript.suggest.enabled": false,
   "clangd.fallbackFlags": ["--std=c++17"],
   "clangd.trace.server": "verbose",
   "eslint.options": {
     "rules": {
       "no-restricted-syntax": "off"
     }
-  }
+  },
+  "java.trace.server": "verbose",
+  "java.eclipse.downloadSources": true,
+  "java.autobuild.enabled": false,
+  "java.sharedIndexes.enabled": "on",
+  "java.import.gradle.enabled": true,
+  "java.import.gradle.wrapper.enabled": true,
+  "java.import.gradle.version": "8.6",
+  "java.import.gradle.user.home": "/Users/priyanshu.shrivastav/.gradle",
+  "java.import.gradle.home": "/Users/priyanshu.shrivastav/.gradle/wrapper/dists/gradle-8.6-bin/afr5mpiioh2wthjmwnkmdsd5w/gradle-8.6/bin",
+  "java.import.gradle.java.home": "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-21.0.5/Contents/Home",
+  "java.import.gradle.offline.enabled": true,
+  "java.import.gradle.arguments": "--offline",
+  "java.symbols.includeSourceMethodDeclarations": true,
+  "java.import.gradle.jvmArguments": "-Xmx12g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8",
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "java.import.generatesMetadataFilesAtProjectRoot": true,
+  "java.jdt.ls.java.home": "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-21.0.5/Contents/Home",
+  "java.jdt.ls.config": "config_mac_arm",
+  "java.project.referencedLibraries": [
+    "/Users/priyanshu.shrivastav/.gradle/caches/modules-2/files-2.1/**/*.jar",
+    "lib/**/*.jar",
+    "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-21.0.5/Contents/Home/lib/**/*.jar"
+  ],
+  "java.contentProvider.preferred": "fernflower",
+  "java.jdt.ls.vmargs": "-Dlog.protocol=true -Dlog.level=ALL -Xmx20000m -Dsun.nio.fs.fileDescriptorsLimit=65536 --add-modules=ALL-SYSTEM --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.annotation=ALL-UNNAMED --add-opens=java.base/java.lang.constant=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.module=ALL-UNNAMED --add-opens=java.base/java.lang.ref=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.lang.runtime=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.net.spi=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.nio.channels=ALL-UNNAMED --add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED --add-opens=java.base/java.nio.charset=ALL-UNNAMED --add-opens=java.base/java.nio.charset.spi=ALL-UNNAMED --add-opens=java.base/java.nio.file=ALL-UNNAMED --add-opens=java.base/java.nio.file.attribute=ALL-UNNAMED --add-opens=java.base/java.nio.file.spi=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.security.cert=ALL-UNNAMED --add-opens=java.base/java.security.interfaces=ALL-UNNAMED --add-opens=java.base/java.security.spec=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.text.spi=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.time.chrono=ALL-UNNAMED --add-opens=java.base/java.time.format=ALL-UNNAMED --add-opens=java.base/java.time.temporal=ALL-UNNAMED --add-opens=java.base/java.time.zone=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens=java.base/java.util.function=ALL-UNNAMED --add-opens=java.base/java.util.jar=ALL-UNNAMED --add-opens=java.base/java.util.random=ALL-UNNAMED --add-opens=java.base/java.util.regex=ALL-UNNAMED --add-opens=java.base/java.util.spi=ALL-UNNAMED --add-opens=java.base/java.util.stream=ALL-UNNAMED --add-opens=java.base/java.util.zip=ALL-UNNAMED --add-opens=java.base/javax.crypto=ALL-UNNAMED --add-opens=java.base/javax.crypto.interfaces=ALL-UNNAMED --add-opens=java.base/javax.crypto.spec=ALL-UNNAMED --add-opens=java.base/javax.net=ALL-UNNAMED --add-opens=java.base/javax.net.ssl=ALL-UNNAMED --add-opens=java.base/javax.security.auth=ALL-UNNAMED --add-opens=java.base/javax.security.auth.callback=ALL-UNNAMED --add-opens=java.base/javax.security.auth.login=ALL-UNNAMED --add-opens=java.base/javax.security.auth.spi=ALL-UNNAMED --add-opens=java.base/javax.security.auth.x500=ALL-UNNAMED --add-opens=java.base/javax.security.cert=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.net.www=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.base/sun.util.locale.provider=ALL-UNNAMED --add-opens=java.desktop/java.beans=ALL-UNNAMED --add-opens=java.scripting/javax.script=ALL-UNNAMED -Djava.locale.providers=SPI,CLDR,COMPAT",
+  "java.configuration.runtimes": [
+    {
+      "name": "JavaSE-21",
+      "path": "/Users/priyanshu.shrivastav/Library/Java/JavaVirtualMachines/corretto-21.0.5/Contents/Home",
+      "default": true
+    }
+  ]
 }
